<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ssssssss"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="108dp"
        android:layout_height="97dp"
        android:layout_alignStart="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="175dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:backgroundTint="@android:color/holo_purple"
        android:text="@string/Virus"
        android:textColor="#9E0284"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="110dp"
        android:layout_height="98dp"
        android:layout_alignStart="@+id/button6"
        android:layout_alignLeft="@+id/button6"
        android:layout_alignEnd="@+id/button6"
        android:layout_alignRight="@+id/button6"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="1dp"
        android:layout_marginRight="1dp"
        android:backgroundTint="@android:color/holo_orange_dark"
        android:text="@string/Food"
        android:textColor="#FFEB3B"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/button4"
        android:layout_width="109dp"
        android:layout_height="96dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="308dp"
        android:layout_marginEnd="26dp"
        android:layout_marginRight="26dp"
        android:backgroundTint="@android:color/holo_blue_light"
        android:text="@string/Air"
        android:textColor="#1707F3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/button5"
        android:layout_width="106dp"
        android:layout_height="103dp"
        android:layout_alignStart="@+id/button2"
        android:layout_alignLeft="@+id/button2"
        android:layout_alignEnd="@+id/button2"
        android:layout_alignRight="@+id/button2"
        android:layout_alignParentTop="true"
        android:layout_marginStart="3dp"
        android:layout_marginLeft="3dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="2dp"
        android:layout_marginRight="2dp"
        android:backgroundTint="#F4FF00"
        android:text="@string/Exercise"
        android:textColor="#FF9800"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/imageView2"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/button6"
        android:layout_width="112dp"
        android:layout_height="99dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="30dp"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="175dp"
        android:backgroundTint="@android:color/holo_red_light"
        android:text="Self Healing"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/button8"
        android:layout_width="116dp"
        android:layout_height="92dp"
        android:layout_below="@+id/button4"
        android:layout_alignStart="@+id/button4"
        android:layout_alignLeft="@+id/button4"
        android:layout_alignEnd="@+id/button4"
        android:layout_alignRight="@+id/button4"
        android:layout_alignBottom="@+id/imageView2"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="-4dp"
        android:layout_marginRight="-4dp"
        android:layout_marginBottom="182dp"
        android:backgroundTint="#22CF06"
        android:text="@string/Weather"
        android:textColor="#005EFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0" />

    <Button
        android:id="@+id/button3"
        android:layout_width="300dp"
        android:layout_height="130dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-2dp"
        android:backgroundTint="@android:color/black"
        android:text="@string/app_name"
        android:textColor="#0000ff"
        android:textColorHighlight="#00DB2121"
        android:textSize="30sp"
        android:textStyle="bold" />

</RelativeLayout>